# MarcCPP

./: .gitmodules  CMakeLists.txt
src/: ControlField.cpp  ControlField.h  DataField.cpp  DataField.h  Leader.cpp  Leader.h  Marc.cpp  Marc.h  Record.cpp  Record.h  Subfield.cpp  Subfield.h  VariableField.cpp  VariableField.h  main.cpp
tests/: a.txt  record_1.info.txt  record_1.iso  record_1.json  record_1_0.mrc  record_1_0.mrk  record_1_1.mrc
